--- a/profapp/templates/_ruslan/partials/_header_files_crop.html
+++ b/profapp/templates/_ruslan/partials/_header_files_crop.html
@@ -1,6 +1,7 @@
 <!---cropper---->
 <link href="{{ static_address('new/angular-crop/ng-crop.css') }}" rel="stylesheet">
 <script src="{{ static_address('new/angular-crop/ng-crop.js') }}"></script>
+<script src="{{ static_address('js/pr-crop-angular.js') }}"></script>
 <script>
     pr_angular_modules.push('ngCrop');
 </script>
