--- a/profapp/templates/company/portal_memberees.html
+++ b/profapp/templates/company/portal_memberees.html
@@ -5,6 +5,7 @@
 {% block head %}
     {{ super() }}
     {% include '_ruslan/partials/_header_files_grid.html' %}
+    {% include '_ruslan/partials/_header_files_membership_plan.html' %}
 {% endblock head %}
 
 {% block portal_content %}
@@ -14,188 +15,13 @@
 
     {% raw %}
 
-    <script type="text/ng-template" id="request_membership_plan.html">
-        <div class="SelectMembershipPlanController_class"
-             af ng-model="data" af-after-save="afterSave" af-url="{{ url_request_membership_plan() }}">
-            <div class="modal-header">
-                <h3 class="modal-title">{{ ::_('please select desired plan') }}</h3>
-                <h4>{{ __('for company `%(data.membership.company.name)s` in portal `%(data.membership.portal.name)s`')
-                    }}</h4>
-            </div>
 
-            <div class="modal-body">
-
-                <table>
-                    <tr>
-                        <td rowspan="2" class="border-none"></td>
-                        <th rowspan="2">{{ ::_('Plan name') }}</th>
-                        <th rowspan="2">{{ ::_('Plan price') }}</th>
-                        <th rowspan="2">{{ ::_('Plan duration') }}</th>
-                        <th colspan="3" class="nowrap">{{ ::_('Publication count') }}</th>
-                    </tr>
-                    <tr>
-                        <th class="publication-bg-VISIBILITY-OPEN">{{ ::_('open') }}</th>
-                        <th class="publication-bg-VISIBILITY-REGISTERED">{{ ::_('registered') }}</th>
-                        <th class="publication-bg-VISIBILITY-PAYED">{{ ::_('payed') }}</th>
-                    </tr>
-
-                    <tr>
-                        <th class="border-none"></th>
-                        <th class="border-none" colspan="6"><h5>{{ _('current plan valid until ' +
-                            (data.membership.current_membership_plan_issued.calculated_stopping_tm?'%(date)s':'last of
-                            days'),
-                            {date: moment(data.membership.current_membership_plan_issued.calculated_stopping_tm)})
-                            }}</h5></th>
-                    </tr>
-
-                    <tr class="link" ng-click="data.selected_by_user_plan_id = false">
-                        <td class="tac border-none"><input ng-value="false" type="radio"
-                                                           ng-model="data.selected_by_user_plan_id"/></td>
-                        <td>{{ data.membership.current_membership_plan_issued.name }}</td>
-                        <td ng-bind-html="pP(data.membership.current_membership_plan_issued)|html"></td>
-                        <td ng-bind-html="pD(data.membership.current_membership_plan_issued)|html"></td>
-                        <td class="w1em publication-bg-VISIBILITY-OPEN"
-                            ng-bind-html="pC(data.membership.current_membership_plan_issued, 'open')|html"></td>
-                        <td class="w1em publication-bg-VISIBILITY-REGISTERED"
-                            ng-bind-html="pC(data.membership.current_membership_plan_issued, 'registered')|html"></td>
-                        <td class="w1em publication-bg-VISIBILITY-PAYED"
-                            ng-bind-html="pC(data.membership.current_membership_plan_issued, 'payed')|html"></td>
-                    </tr>
-
-
-                    <tbody ng-if="data.membership.requested_membership_plan_issued">
-
-                    <tr>
-                        <th class="border-none"></th>
-                        <th class="border-none" colspan="6"><h5>{{ ::_('requested plan') }}</h5></th>
-                    </tr>
-
-                    <tr class="link" ng-click="data.selected_by_user_plan_id = true">
-                        <td class="tac border-none"><input ng-value="true" type="radio" class="border-none"
-                                                           ng-model="data.selected_by_user_plan_id"/></td>
-                        <td>{{ data.membership.requested_membership_plan_issued.name }}</td>
-                        <td ng-bind-html="pP(data.membership.requested_membership_plan_issued)|html"></td>
-                        <td ng-bind-html="pD(data.membership.requested_membership_plan_issued)|html"></td>
-                        <td class="w1em publication-bg-VISIBILITY-OPEN"
-                            ng-bind-html="pC(data.membership.requested_membership_plan_issued, 'open')|html"></td>
-                        <td class="w1em publication-bg-VISIBILITY-REGISTERED"
-                            ng-bind-html="pC(data.membership.requested_membership_plan_issued, 'registered')|html"></td>
-                        <td class="w1em publication-bg-VISIBILITY-PAYED"
-                            ng-bind-html="pC(data.membership.requested_membership_plan_issued, 'payed')|html"></td>
-                    </tr>
-
-                    </tbody>
-
-                    <tr>
-                        <th class="border-none"></th>
-                        <th class="border-none" colspan="6"><h5>{{ ::_('please select desired membership plan') }}</h5>
-                    </tr>
-
-
-                    <tr class="link" ng-click="data.selected_by_user_plan_id = plan.id"
-                        ng-repeat="plan in data.select.plans">
-                        <td class="tac border-none">
-                            <div pr-validation-answer="data_validation:selected_by_user_plan_id"><input
-                                    ng-value="plan.id" type="radio" ng-model="data.selected_by_user_plan_id"/></div>
-                        </td>
-                        <td>{{ plan.name }}</td>
-                        <td ng-bind-html="pP(plan)|html"></td>
-                        <td ng-bind-html="pD(plan)|html"></td>
-                        <td class="w1em publication-bg-VISIBILITY-OPEN" ng-bind-html="pC(plan, 'open', true)|html"></td>
-                        <td class="w1em publication-bg-VISIBILITY-REGISTERED"
-                            ng-bind-html="pC(plan, 'registered', true)|html"></td>
-                        <td class="w1em publication-bg-VISIBILITY-PAYED"
-                            ng-bind-html="pC(plan, 'payed', true)|html"></td>
-                    </tr>
-
-                    <tr ng-class="{'disabled': data.selected_by_user_plan_id === false || data.selected_by_user_plan_id === true}">
-                        <td class="border-none tar" colspan="7">
-                            <label><input
-                                    ng-disabled="data.selected_by_user_plan_id === false || data.selected_by_user_plan_id === true"
-                                    ng-value="true" type="radio"
-                                    ng-model="data.membership.request_membership_plan_issued_immediately"/>&nbsp;{{
-                                _('request immediately') }}</label>
-                            &nbsp;&nbsp;&nbsp;
-                            <label><input
-                                    ng-disabled="data.selected_by_user_plan_id === false || data.selected_by_user_plan_id === true"
-                                    ng-value="false" type="radio"
-                                    ng-model="data.membership.request_membership_plan_issued_immediately"/>&nbsp;{{
-                                _('request after the current plan will be finished') }}</label>
-
-                        </td>
-                    </tr>
-
-                </table>
-
-
-            </div>
-
-            <div class="modal-footer">
-                <button class="btn btn-primary" type="button"
-                        ng-click="$af.save(data)" ng-disabled="!$af.isActionAllowed(data, 'save') ">
-                    {{ ::_('Select plan') }}
-                </button>
-                <button class="btn btn-warning" type="button" ng-click="cancel()">{{ _('Cancel') }}</button>
-            </div>
-        </div>
-    </script>
     {% endraw %}
 
     <script>
 
-        module.controller('RequestMembershipPlanController', function ($scope, $ok, $uibModalInstance, membership_id) {
 
-            $scope.$$translate = {{ translates('RequestMembershipPlanController')|safe }};
-
-            $scope.url_request_membership_plan = {{ raw_url_for('portal.request_membership_plan')|safe }};
-            $scope.membership_id = membership_id;
-
-            $scope.afterSave = function (resp) {
-                $uibModalInstance.close(resp)
-            };
-
-            $scope.get_count = function (pub_type, planed_count) {
-                var holded =
-                        $scope.data.select['publications']['by_status_visibility']['HOLDED'][pub_type.toUpperCase()];
-                var published =
-                        $scope.data.select['publications']['by_status_visibility']['PUBLISHED'][pub_type.toUpperCase()];
-                if (planed_count !== false) {
-                    holded = published + holded - planed_count;
-                    holded = holded < 0 ? 0 : holded;
-                    holded = planed_count < 0 ? 0 : holded;
-                    published = published - holded;
-                }
-                return '&nbsp;(<nothing class="publication-fg-STATUS-PUBLISHED">' + published + ',</nothing><nothing class="publication-fg-STATUS-HOLDED">' + holded + '</nothing>)';
-            }
-
-            $scope.pC = function (plan, pub_type, planed) {
-                if (!$scope.data) {
-                    return ''
-                }
-                var ret = plan['publication_count_' + pub_type];
-                return (ret < 0 ? ('&infin;') : (ret ? ret : '0')) + $scope.get_count(pub_type, planed ? ret : false);
-            };
-
-            $scope.pD = function (plan) {
-                if (!$scope.data) {
-                    return ''
-                }
-                return ((parseInt(plan.duration) <= 0 || plan.id == $scope.data.membership.portal.default_membership_plan_id) ? '&infin;' : plan.duration);
-            };
-
-            $scope.pP = function (plan) {
-                if (!$scope.data) {
-                    return ''
-                }
-                return ((plan.price <= 0 || plan.id == $scope.data.membership.portal.default_membership_plan_id) ? 'free' : ('' + plan.price + ' ' + plan.currency_id));
-            };
-
-
-            $scope.cancel = $uibModalInstance.dismiss;
-
-        });
-
-        module.controller('portals_partners', function ($scope, $ok, $sce, $membership_tags, $uibModal) {
+        module.controller('portals_partners', function ($scope, $ok, $sce, $membership_plan, $membership_tags, $uibModal) {
             angularControllerFunction('CompanyMenuController', 'set_selected_company_menu')('portal_memberees');
             $scope.$$translate = {{ translates('portals_partners')|safe }};
             $scope.url_portal_memberees = '{{ url_for('company.portal_memberees', company_id=company.id)}}';
@@ -259,7 +85,7 @@
                 return 'http://' + link;
             };
 
-            $scope.set_tags = function (id, row, name) {
+            $scope.set_tags = function (id, row, column_name) {
                 if (row['status'] !== 'ACTIVE') {
                     return false;
                 }
@@ -279,12 +105,8 @@
                 if (row['status'] !== 'ACTIVE') {
                     return false;
                 }
-                var modalInstance = $uibModal.open({
-                    templateUrl: 'request_membership_plan.html',
-                    controller: 'RequestMembershipPlanController',
-                    resolve: resolveDictForAngularController({
-                        membership_id: row['id']
-                    })
+                var modalInstance = $membership_plan({
+                    membership_id: row['id']
                 });
                 modalInstance.result.then(function (resp) {
                     $scope.gridApi.grid.grid_change_row(resp);
