--- a/profapp/templates/company/companies_members.html
+++ b/profapp/templates/company/companies_members.html
@@ -5,6 +5,7 @@
 {% block head %}
     {{ super() }}
     {% include '_ruslan/partials/_header_files_grid.html' %}
+    {% include '_ruslan/partials/_header_files_membership_plan.html' %}
 {% endblock head %}
 
 {% block portal_content %}
@@ -12,190 +13,11 @@
         {% include 'company/company_base_angular.html' %}
     {% endblock company_base %}
 
-    {% raw %}
-
-    <script type="text/ng-template" id="set_membership_plan.html">
-        <div class="SelectMembershipPlanController_class"
-             af ng-model="data" af-after-save="afterSave" af-url="{{ url_set_membership_plan() }}">
-            <div class="modal-header">
-                <h3 class="modal-title">{{ ::_('please select plan') }}</h3>
-                <h4>{{ __('for company `%(data.membership.company.name)s` in portal `%(data.membership.portal.name)s`')
-                    }}</h4>
-            </div>
-
-            <div class="modal-body">
-
-                <table>
-                    <tr>
-                        <td rowspan="2" class="border-none"></td>
-                        <th rowspan="2">{{ ::_('Plan name') }}</th>
-                        <th rowspan="2">{{ ::_('Plan price') }}</th>
-                        <th rowspan="2">{{ ::_('Plan duration') }}</th>
-                        <th colspan="3" class="nowrap">{{ ::_('Publication count') }}</th>
-                    </tr>
-                    <tr>
-                        <th class="publication-bg-VISIBILITY-OPEN">{{ ::_('open') }}</th>
-                        <th class="publication-bg-VISIBILITY-REGISTERED">{{ ::_('registered') }}</th>
-                        <th class="publication-bg-VISIBILITY-PAYED">{{ ::_('payed') }}</th>
-                    </tr>
-
-                    <tr>
-                        <th class="border-none"></th>
-                        <th class="border-none" colspan="6"><h5>{{ _('current plan valid until ' +
-                            (data.membership.current_membership_plan_issued.calculated_stopping_tm?'%(date)s':'last of
-                            days'),
-                            {date: moment(data.membership.current_membership_plan_issued.calculated_stopping_tm)})
-                            }}</h5></th>
-                    </tr>
-
-                    <tr class="link" ng-click="data.selected_by_user_plan_id = false">
-                        <td class="tac border-none"><input ng-value="false" type="radio"
-                                                           ng-model="data.selected_by_user_plan_id"/></td>
-                        <td>{{ data.membership.current_membership_plan_issued.name }}</td>
-                        <td ng-bind-html="pP(data.membership.current_membership_plan_issued)|html"></td>
-                        <td ng-bind-html="pD(data.membership.current_membership_plan_issued)|html"></td>
-                        <td class="w1em publication-bg-VISIBILITY-OPEN"
-                            ng-bind-html="pC(data.membership.current_membership_plan_issued, 'open')|html"></td>
-                        <td class="w1em publication-bg-VISIBILITY-REGISTERED"
-                            ng-bind-html="pC(data.membership.current_membership_plan_issued, 'registered')|html"></td>
-                        <td class="w1em publication-bg-VISIBILITY-PAYED"
-                            ng-bind-html="pC(data.membership.current_membership_plan_issued, 'payed')|html"></td>
-                    </tr>
-
-
-                    <tbody ng-if="data.membership.requested_membership_plan_issued">
-
-                    <tr>
-                        <th class="border-none"></th>
-                        <th class="border-none" colspan="6"><h5>{{ _('requested plan at %(request_date)s by
-                            %(request_user_name)s', {
-                            'request_date': moment(data.membership.requested_membership_plan_issued.cr_tm),
-                            'request_user_name':
-                            moment(data.membership.requested_membership_plan_issued.requested_by_user.full_name)
-                            }) }}</h5></th>
-                    </tr>
-
-                    <tr class="link" ng-click="data.selected_by_user_plan_id = true">
-                        <td class="tac border-none"><input ng-value="true" type="radio" class="border-none"
-                                                           ng-model="data.selected_by_user_plan_id"/></td>
-                        <td>{{ data.membership.requested_membership_plan_issued.name }}</td>
-                        <td ng-bind-html="pP(data.membership.requested_membership_plan_issued)|html"></td>
-                        <td ng-bind-html="pD(data.membership.requested_membership_plan_issued)|html"></td>
-                        <td class="w1em publication-bg-VISIBILITY-OPEN"
-                            ng-bind-html="pC(data.membership.requested_membership_plan_issued, 'open')|html"></td>
-                        <td class="w1em publication-bg-VISIBILITY-REGISTERED"
-                            ng-bind-html="pC(data.membership.requested_membership_plan_issued, 'registered')|html"></td>
-                        <td class="w1em publication-bg-VISIBILITY-PAYED"
-                            ng-bind-html="pC(data.membership.requested_membership_plan_issued, 'payed')|html"></td>
-                    </tr>
-
-                    </tbody>
-
-                    <tr>
-                        <th class="border-none"></th>
-                        <th class="border-none" colspan="6"><h5>{{ ::_('you can also select other available plan')
-                            }}</h5>
-                    </tr>
-
-
-                    <tr class="link" ng-click="data.selected_by_user_plan_id = plan.id"
-                        ng-repeat="plan in data.select.plans">
-                        <td class="tac border-none">
-                            <div pr-validation-answer="data_validation:selected_by_user_plan_id"><input
-                                    ng-value="plan.id" type="radio" ng-model="data.selected_by_user_plan_id"/></div>
-                        </td>
-                        <td>{{ plan.name }}</td>
-                        <td ng-bind-html="pP(plan)|html"></td>
-                        <td ng-bind-html="pD(plan)|html"></td>
-                        <td class="w1em publication-bg-VISIBILITY-OPEN" ng-bind-html="pC(plan, 'open', true)|html"></td>
-                        <td class="w1em publication-bg-VISIBILITY-REGISTERED"
-                            ng-bind-html="pC(plan, 'registered', true)|html"></td>
-                        <td class="w1em publication-bg-VISIBILITY-PAYED"
-                            ng-bind-html="pC(plan, 'payed', true)|html"></td>
-                    </tr>
-
-                    <tr ng-class="{'disabled': data.selected_by_user_plan_id === false || data.selected_by_user_plan_id === true}">
-                        <td class="border-none tar" colspan="7">
-                            <label><input
-                                    ng-disabled="data.selected_by_user_plan_id === false || data.selected_by_user_plan_id === true"
-                                    ng-value="true" type="radio"
-                                    ng-model="data.membership.request_membership_plan_issued_immediately"/>&nbsp;{{
-                                _('start immediately') }}</label>
-                            &nbsp;&nbsp;&nbsp;
-                            <label><input
-                                    ng-disabled="data.selected_by_user_plan_id === false || data.selected_by_user_plan_id === true"
-                                    ng-value="false" type="radio"
-                                    ng-model="data.membership.request_membership_plan_issued_immediately"/>&nbsp;{{
-                                _('start after the current plan will be finished') }}</label>
-
-                        </td>
-                    </tr>
-
-                </table>
-
-
-            </div>
-
-            <div class="modal-footer">
-                <button class="btn btn-primary" type="button"
-                        ng-click="$af.save(data)" ng-disabled="!$af.isActionAllowed(data, 'save') ">
-                    {{ ::_('Select plan') }}
-                </button>
-                <button class="btn btn-warning" type="button" ng-click="cancel()">{{ _('Cancel') }}</button>
-            </div>
-        </div>
-    </script>
-    {% endraw %}
 
     <script>
 
-        module.controller('SetMembershipPlanController', function ($scope, $ok, $uibModalInstance, membership_id) {
+        module.controller('company_partners', function ($scope, $ok, $membership_plan) {
 
-            $scope.$$translate = {{ translates('SetMembershipPlanController')|safe }};
-
-            $scope.url_set_membership_plan = {{ raw_url_for('portal.set_membership_plan')|safe }};
-            $scope.membership_id = membership_id;
-
-            $scope.afterSave = function (resp) {
-                $uibModalInstance.close(resp)
-            };
-
-            $scope.amidLoad = function (data) {
-                if (data['membership'] && data['membership']['requested_membership_plan']) {
-                    data['selected_by_user_plan_id'] = data['membership']['requested_membership_plan']['id'];
-                }
-                return data;
-
-            };
-
-            $scope.pC = function (plan, pub_type, planed) {
-                if (!$scope.data) {
-                    return ''
-                }
-                var ret = plan['publication_count_' + pub_type];
-                return (ret < 0 ? ('&infin;') : (ret ? ret : '0')) + $scope.get_count(pub_type, planed ? ret : false);
-            };
-
-            $scope.pD = function (plan) {
-                if (!$scope.data) {
-                    return ''
-                }
-                return ((parseInt(plan.duration) <= 0 || plan.id == $scope.data.membership.portal.default_membership_plan_id) ? '&infin;' : plan.duration);
-            };
-
-            $scope.pP = function (plan) {
-                if (!$scope.data) {
-                    return ''
-                }
-                return ((plan.price <= 0 || plan.id == $scope.data.membership.portal.default_membership_plan_id) ? 'free' : ('' + plan.price + ' ' + plan.currency_id));
-            };
-
-            $scope.cancel = $uibModalInstance.dismiss;
-
-        });
-
-
-        module.controller('company_partners', function ($scope, $ok, $uibModal) {
             angularControllerFunction('CompanyMenuController', 'set_selected_company_menu')('companies_members');
             $scope.$$translate = {{translates('company_partners') | safe}};
             $scope.url_load = '{{ url_for('portal.companies_members_load', company_id=company.id)}}';
@@ -238,14 +60,10 @@
             };
 
             $scope.set_membership_plan = function (id, row, column_name) {
-                var modalInstance = $uibModal.open({
-                    templateUrl: 'set_membership_plan.html',
-                    controller: 'SetMembershipPlanController',
-                    resolve: resolveDictForAngularController({
-                        membership_id: row['id']
-                    })
-                });
-                modalInstance.result.then(function (resp) {
+                $membership_plan({
+                    membership_id: row['id'],
+                    request_or_set: 'set'
+                }).result.then(function (resp) {
                     $scope.gridApi.grid.grid_change_row(resp);
                 });
             };
