--- a/profapp/static/front/wood/css/custom.css
+++ b/profapp/static/front/wood/css/custom.css
@@ -18,6 +18,7 @@
 }
 
 body {
+    background-color: #eee;
     height: 100%;
     font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
     padding-top: 90px;
@@ -60,10 +61,18 @@ a:hover {
         display: block;
     }
 
+    .navbar-default .navbar-toggle .icon-bar {
+        background-color: #212121;
+    }
+
     .navbar-collapse,
     .navbar-form {
         border-top: 1px solid transparent;
         box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+
+    .navbar-default .navbar-collapse {
+        border: 0;
     }
 
     .navbar-form {
@@ -78,6 +87,13 @@ a:hover {
         border-bottom: 1px solid transparent;
         -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.1),0 1px 0 rgba(255,255,255,.1);
         box-shadow: inset 0 1px 0 rgba(255,255,255,.1),0 1px 0 rgba(255,255,255,.1);
+    }
+
+    .navbar-default .navbar-nav>.active>a,
+    .navbar-default .navbar-nav>.active>a:focus,
+    .navbar-default .navbar-nav>.active>a:hover {
+        color: #fff;
+        background-color: #26A69A;
     }
 
     .navbar-fixed-top {
@@ -98,11 +114,6 @@ a:hover {
         float: none;
     }
 
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-
     .collapse.in {
         display:block !important;
     }
@@ -114,8 +125,33 @@ a:hover {
     }
 }
 
-.navbar-inverse {
-    background-color: #212121;
+.navbar-default .navbar-toggle:focus,
+.navbar-default .navbar-toggle:hover {
+    background-color: transparent;
+}
+
+.navbar-default .navbar-toggle i {
+    color: #424242;
+    font-size: 1.4em;
+}
+
+.navbar-default .navbar-toggle i:focus,
+.navbar-default .navbar-toggle i:hover {
+    color: #26A69A;
+}
+
+.navbar-default .navbar-nav>.active>a,
+.navbar-default .navbar-nav>.active>a:focus,
+.navbar-default .navbar-nav>.active>a:hover {
+    color: #fff;
+    background-color: #26A69A;
+}
+
+.navbar-default {
+    background-color: #fff;
+    box-shadow: 0 2px 6px 0 #9E9E9E;
+    -webkit-box-shadow: 0 2px 6px 0 #9E9E9E;
+    -moz-box-shadow: 0 2px 6px 0 #9E9E9E;
 }
 
 .navbar-collapse.in {
@@ -123,14 +159,15 @@ a:hover {
 }
 
 .navbar-toggle {
-    margin-top: 13px;
-    margin-bottom: 13px;
-    margin-left: 15px;
+    margin: 8px 15px 8px 15px;
+    padding: 10px;
+    border: 0;
 }
 
 .navbar-nav li a{
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 21px;
+    font-weight: 400;
 }
 
 /*Search form*/
@@ -142,8 +179,8 @@ a:hover {
 }
 
 .search-form {
-    border-color: #424242;
-    background-color: #080808;
+    border-color: #BDBDBD;
+    background-color: transparent;
     color: #9d9d9d;
 }
 
@@ -153,8 +190,8 @@ a:hover {
 
 .search-btn {
     color: #9d9d9d;
-    background-color: #080808;
-    border-color: #424242;
+    background-color: transparent;
+    border-color: #BDBDBD;
 }
 
 .search-btn:hover {
@@ -307,18 +344,30 @@ a:hover {
      color: #009688;
  }
 
- .fa-main-tag {
-
- }
-
- /*Article thumbnail settings*/
+/*Article thumbnail settings*/
 
 .article-thumbnail,
 .company-thumbnail,
 .event-article-thumbnail {
+    width: 100%;
     height: auto;
     background-color: #fff;
     margin-bottom: 30px;
+    margin-left: 0;
+    margin-right: 0;
+    box-shadow: 0px 2px 4px 0px #BDBDBD;
+    -webkit-box-shadow: 0px 2px 4px 0px #BDBDBD;
+    -moz-box-shadow: 0px 2px 4px 0px #BDBDBD;
+}
+
+.img {
+    padding-top: 15px;
+}
+
+.text {
+    padding-top: 15px;
+    padding-bottom: 30px;
+    padding-right: 30px;
 }
 
 .article-thumbnail-img {
@@ -352,6 +401,7 @@ a:hover {
 }
 
 .div-link {
+    font-size: 1.2em;
     margin-top: 0;
     margin-bottom: 15px;
     color: #009688;
@@ -413,7 +463,7 @@ a:hover {
     display: block;
     display: -webkit-box;
     max-width: 100%;
-    height: 100px;
+    height: auto;
     margin: 0 auto;
     font-size: 1em;
     line-height: 1.6;
@@ -450,6 +500,8 @@ a:hover {
     height: 240px;
     margin-bottom: 30px;
     cursor: pointer;
+    display: inline-block;
+    overflow: hidden;
 }
 
 .horizontal-banner {
@@ -457,6 +509,8 @@ a:hover {
     height: auto;
     margin-bottom: 30px;
     cursor: pointer;
+    display: inline-block;
+    overflow: hidden;
 }
 
 /*Paginaton settings*/
@@ -466,6 +520,7 @@ a:hover {
     font-size: 1.125em;
     color: #757575;
     font-weight: 600;
+    background-color: transparent;
 }
 
 .pagination li a:hover {
@@ -532,11 +587,16 @@ a:hover {
 
 /*Company page settings*/
 
-.company-menu {
+.company-head {
+    background-color: #fff;
     margin-bottom: 30px;
+    box-shadow: 0 2px 4px 0 #BDBDBD;
+    -webkit-box-shadow: 0 2px 4px 0 #BDBDBD;
+    -moz-box-shadow: 0 2px 4px 0 #BDBDBD;
 }
 
 .company-header {
+    background-color: #fff;
     width: 100%;
     height: auto;
     margin-bottom: 30px;
@@ -555,19 +615,36 @@ a:hover {
 }
 
 .nav-pills li a {
-    background-color: #EEEEEE;
+    background-color: #eee;
     border-radius: 0;
-    color: #757575;
+    color: #424242;
 }
 
 .nav-pills li.active a,
 .nav-pills li.active a:focus,
 .nav-pills li.active a:hover {
-    background-color: #009688;
+    background-color: #424242;
+    color: #eee;
 }
 
 .nav-pills li a:hover {
-    background-color: #E0E0E0;
+    background-color: #424242;
+    color: #eee;
+}
+
+.company-contacts,
+.company-adress {
+    background-color: #fff;
+    margin-bottom: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    box-shadow: 0 2px 4px 0 #BDBDBD;
+    -webkit-box-shadow: 0 2px 4px 0 #BDBDBD;
+    -moz-box-shadow: 0 2px 4px 0 #BDBDBD;
+}
+
+hr {
+    margin: 0 0 30px 0;
 }
 
 .contacts-header {
@@ -622,7 +699,19 @@ a:hover {
     color: #009688;
 }
 
+#map {
+    margin-bottom: 30px;
+}
+
 /*Article settings*/
+
+.article-full {
+    background-color: #fff;
+    padding: 30px 60px 60px 60px;
+    box-shadow: 0 2px 4px 0 #BDBDBD;
+    -webkit-box-shadow: 0 2px 4px 0 #BDBDBD;
+    -moz-box-shadow: 0 2px 4px 0 #BDBDBD;
+}
 
 .article-header {
     margin-bottom: 30px;
