--- a/profapp/templates/front/wood/company_menu.html
+++ b/profapp/templates/front/wood/company_menu.html
@@ -1,13 +1,12 @@
-<div class="container">
+<section class="container company-head">
     <div class="row">
-        <div class="col-xs-12 col-lg-10">
+        <div class="">
             <div class="clearfix">
-                <main class="center-block" role="main">
-                    <section class="company-header">
-    <img class="img-responsive center-block logo" src="{{ membership['company']['logo']['url'] }}" alt="Company logo">
-    <h5 class="text-center company">{{ membership['company']|highlighted('name') }}</h5>
-</section>
-                    <nav>
+                <div class="company-header center-block">
+                    <img class="img-responsive center-block logo" src="{{ membership['company']['logo']['url'] }}" alt="Company logo">
+                    <h5 class="text-center company">{{ membership['company']|highlighted('name') }}</h5>
+                </div>
+                <nav>
                         <ul class="nav nav-pills nav-justified company-menu">
 
 
@@ -19,10 +18,7 @@
                             {% for division_id, division in portal.divisions.items() %}
                                 {% if division.portal_division_type_id == 'news' or division.portal_division_type_id == 'events' %}
                                     <li {% if 'id' in company_menu_selected_item and company_menu_selected_item['id'] == division.id %}class="active"{% endif %}>
-                                        <a href="{{ url_for('front.division',
-                                   member_company_id = member_company['id'] ,
-                                   member_company_name = member_company['name'],
-                                   division_name=division.name) }}">{{ division.name }}</a>
+                                        <a href="{{ url_for('front.division', member_company_id = member_company['id'] , member_company_name = member_company['name'], division_name=division.name) }}">{{ division.name }}</a>
                                     </li>
                                 {% endif %}
                             {% endfor %}
@@ -37,8 +33,7 @@
 
                         </ul>
                     </nav>
-                </main>
             </div>
         </div>
     </div>
-</div>
+</section>
