--- a/profapp/templates/front/wood/header.html
+++ b/profapp/templates/front/wood/header.html
@@ -1,20 +1,16 @@
-<header class="navbar navbar-inverse navbar-fixed-top">
+<header class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
             {% if tags and tags.all %}
             <!--Off-canvas toggle button-->
-            <button type="button" class="navbar-toggle pull-left offcanvas-btn" data-toggle="offcanvas"
-                    data-target=".navmenu" data-canvas="body">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+            <button type="button" class="navbar-toggle pull-left offcanvas-btn" data-toggle="offcanvas" data-target=".navmenu" data-canvas="body">
+                <span class="sr-only">Toggle navigation</span>
+                <i class="fa fa-bars" aria-hidden="true"></i>
             </button>
             <!--Collapsive navbar toggle button-->
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapsible">
                 <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+                <i class="fa fa-bars" aria-hidden="true"></i>
             </button>
             {% endif %}
             <a class="navbar-brand" href="/" style="width: 200px; "><img class="img-responsive" src="{{ portal.logo.url }}"></a>
