--- a/profapp/templates/front/wood/division_articles.html
+++ b/profapp/templates/front/wood/division_articles.html
@@ -33,7 +33,7 @@
                 {% include 'pagination.html' %}
                 </div>
             </div>
-            <aside class="col-lg-2">
+            <aside class="col-xs-12 col-lg-2">
                 {% include 'right_banners.html' %}
             </aside>
         </div>
