--- a/profapp/templates/front/wood/division_catalog.html
+++ b/profapp/templates/front/wood/division_catalog.html
@@ -16,7 +16,7 @@
                 {% endfor %}
                 {% include 'pagination.html' %}
             </div>
-        <aside class="col-lg-2">
+        <aside class="col-xs-12 col-lg-2">
             {% include 'right_banners.html' %}
         </aside>
         </div>
