--- a/profapp/templates/front/wood/layout_company_page.html
+++ b/profapp/templates/front/wood/layout_company_page.html
@@ -10,11 +10,11 @@
             <div class="col-xs-12 col-lg-10">
                 <div class="clearfix">
                     <main role="main">
-                        {% block company_content %}{% endblock %}
+                            {% block company_content %}{% endblock %}
                     </main>
                 </div>
             </div>
-            <aside class="col-lg-2">
+            <aside class="col-xs-12 col-lg-2">
                 {% include 'right_banners.html' %}
             </aside>
         </div>
