--- a/profapp/static/front/wood/css/custom.css
+++ b/profapp/static/front/wood/css/custom.css
@@ -37,11 +37,6 @@ a:hover {
     border: 0;
 }
 
-.tag-selected {
-    background-color: #00695C;
-    color: #fff;
-}
-
 .offcanvas-btn {
     display: block;
 }
@@ -152,6 +147,7 @@ a:hover {
     box-shadow: 0 2px 6px 0 #9E9E9E;
     -webkit-box-shadow: 0 2px 6px 0 #9E9E9E;
     -moz-box-shadow: 0 2px 6px 0 #9E9E9E;
+    color: #0a0a0a;
 }
 
 .navbar-collapse.in {
@@ -426,11 +422,28 @@ a:hover {
     background-color: #26A69A;
     margin-right: 15px;
     margin-top: 15px;
+    color: #fff;
 }
 
 .main-tag:hover {
     background-color: #009688;
     text-decoration-line: none;
+}
+
+.main-tag a {
+    color: #fff;
+}
+
+.tag-selected {
+    background-color: #E53935;
+}
+
+.tag-selected:hover {
+    background-color: #C62828;
+}
+
+.tag-selected a {
+    color: #fff;
 }
 
 .article-details {
@@ -442,16 +455,13 @@ a:hover {
     color: #757575;
 }
 
-.article-social {
-    font-size: 0.875em;
-    color: #757575;
-}
-
 .company-name,
 .post-date,
 .article-comments,
 .article-read-count,
-.article-author{
+.article-author,
+.bookmark,
+.like {
     margin-right: 15px;
 }
 
@@ -600,6 +610,7 @@ a:hover {
     width: 100%;
     height: auto;
     margin-bottom: 30px;
+    padding-top: 30px;
 }
 
 .logo {
@@ -633,7 +644,7 @@ a:hover {
 }
 
 .company-contacts,
-.company-adress {
+.company-address {
     background-color: #fff;
     margin-bottom: 30px;
     padding-top: 30px;
@@ -643,7 +654,7 @@ a:hover {
     -moz-box-shadow: 0 2px 4px 0 #BDBDBD;
 }
 
-hr {
+.contacts-divider {
     margin: 0 0 30px 0;
 }
 
@@ -699,18 +710,24 @@ hr {
     color: #009688;
 }
 
+.address{
+    margin-bottom: 30px;
+}
+
 #map {
     margin-bottom: 30px;
 }
 
 /*Article settings*/
 
-.article-full {
+.article-full,
+.about-bg {
     background-color: #fff;
     padding: 30px 60px 60px 60px;
     box-shadow: 0 2px 4px 0 #BDBDBD;
     -webkit-box-shadow: 0 2px 4px 0 #BDBDBD;
     -moz-box-shadow: 0 2px 4px 0 #BDBDBD;
+    margin-bottom: 30px;
 }
 
 .article-header {
@@ -723,6 +740,7 @@ hr {
     font-weight: 600;
     color: #424242;
     margin-bottom: 30px;
+    margin-top: 0;
 }
 
 .article-description {
@@ -741,6 +759,7 @@ hr {
 .article-main-img {
     width: 100%;
     height: auto;
+    margin-bottom: 30px;
 }
 
 .article-img {
@@ -771,8 +790,6 @@ hr {
     height: 36px;
 }
 
-
-/*TODO: YM by OZ: my classes ---->>>>*/
 .link {
     cursor: pointer;
     -webkit-touch-callout: none; /* iOS Safari */
@@ -782,8 +799,3 @@ hr {
     -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none;
 }
-
-.mr15px {
-    margin-right: 15px;
-}
-/*TODO: YM by OZ: my classes <<<<<---- */
