--- a/profapp/templates/front/wood/article_thumbnail.html
+++ b/profapp/templates/front/wood/article_thumbnail.html
@@ -6,7 +6,8 @@
                 <a href="{{ url_for('front.article_details', publication_id=article['id'], publication_title=article['title']) }}">
                     {% if article['illustration']['selected_by_user']['type'] != 'none' %}
                         <img class="img-responsive" src="{{ article['illustration']['url'] }}"/>{% else %}
-                        <img class="img-responsive" src="assets/img/no-image.jpg">{% endif %}
+                        <img class="img-responsive" src="assets/img/no-image.jpg">
+                    {% endif %}
                 </a>
             </div>
         </div>
@@ -24,23 +25,22 @@
             </header>
             <div class="article-details clearfix">
                 <!--Company link-->
-                                            <span class="company-name">
-                                                <a class="company-link"
-                                                   href="{{ url_for('front.company_page', member_company_name = article['company']['name'], member_company_id = article['company']['id']) }}"><i
-                                                        class="fa fa-building-o" aria-hidden="true"
-                                                        style="margin-right: 5px"></i>{{ article['company']['name']|safe }}</a>
-                                            </span>
+                <span class="company-name">
+                    <a class="company-link" href="{{ url_for('front.company_page', member_company_name = article['company']['name'], member_company_id = article['company']['id']) }}">
+                        <i class="fa fa-building-o" aria-hidden="true" style="margin-right: 5px"></i>{{ article['company']['name']|safe }}
+                    </a>
+                </span>
                 <!--Article comments-->
                 <!--
-                                                            <span class="article-comments">
-                                                                <a class="comment" href=""><i class="fa fa-comment-o" aria-hidden="true" style="margin-right: 5px"></i>5 коментарів</a>
-                                                            </span>
+                 <span class="article-comments">
+                    <a class="comment" href=""><i class="fa fa-comment-o" aria-hidden="true" style="margin-right: 5px"></i>5 коментарів</a>
+                 </span>
                 -->
                 <!--Article publication date-->
-                                            <span class="post-date">
-                                                <i class="fa fa-clock-o" aria-hidden="true"></i>
-                                                <time class="publication-date">{{ frontmacros.article_date(article.portal_division.portal_division_type_id, article) }}</time>
-                                            </span>
+                <span class="post-date">
+                    <i class="fa fa-calendar" aria-hidden="true"></i>
+                    <time class="publication-date">{{ frontmacros.article_date(article.portal_division.portal_division_type_id, article) }}</time>
+                </span>
             </div>
             <!--Article description-->
             {% if article['short'] %}<div class="clearfix">
@@ -49,7 +49,6 @@
                 </p>
             </div>{% endif %}
             <!--Article main tag-->
-
             {% if article.tags|length %}{% set tag = article.tags[0] %}
                 {{ frontmacros.tag(tag, tags, 'main-tag label') }}
             {% endif %}
