--- a/profapp/templates/front/wood/company_about.html
+++ b/profapp/templates/front/wood/company_about.html
@@ -1,4 +1,6 @@
 {% extends 'layout_company_page.html' %}
 {% block company_content %}
-{{ member_company['about']|safe }}
+    <section class="about-bg">
+      {{ member_company['about']|safe }}
+    </section>
 {% endblock %}
